--- a/src/scss/Foundation/_variable.scss
+++ b/src/scss/Foundation/_variable.scss
@@ -11,16 +11,16 @@ $font_mincho: 'Yu Mincho', serif;
 
 $blue_color: #004097;
 $base_color: #FFFFFF;
-$green_color: #7EBF41;
+$green_color: #249E54;
 $orange_color: #FF7100;
 $title_color: #4A5778;
 $gray_color: #B3B3B3;
 $wheat_color: #F9F5F0;
 $pink_color: #FF7BAC;
-$red_color: #E60012;
+$red_color: #D81718;
 $olive_color: #C3BE71;
 $teal_color: #32A7E0;
 $purple_color: #B16E9E;
 $peach_color: #E6B289;
 $black_color: #303030;
-$yellow_color: #FED517;
+$yellow_color: #FFE109;
