--- a/src/scss/Layout/_header.scss
+++ b/src/scss/Layout/_header.scss
@@ -1,12 +1,14 @@
 .header {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    height: 11.8rem;
     background: transparent;
-    padding: 3.2rem 2.0rem;
+    padding: 0 4.0rem;
     transition: all 0.4s ease-in-out;
     z-index: 996;
+    background: $red_color;
     @include media('sp') {
         padding: 4.0rem 2.0rem 0;
     }
@@ -16,13 +18,13 @@
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        max-width: 128.0rem;
+        height: 100%;
         margin-left: auto;
         margin-right: auto;
     }
     .header-logo {
         position: relative;
-        width: 15.5rem;
+        width: 20rem;
         // width: 155px;
         padding: 0;
         a {
@@ -38,6 +40,7 @@
         }
     }
     .header-nav {
+        display: none;
         position: relative;
         padding: 0;
         @include media('tb') {
