--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "Layout/header";
 @import "Layout/nav";
 @import "Pages/index";
+@import "Pages/common";
 @import "Layout/footer";
 // Responsive
 @import "Responsive/responsive";
