--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1487,6 +1487,10 @@
   margin: 0 auto;
 }
 
+.half-wrapper {
+  width: 50%;
+}
+
 @media only screen and (max-width: 768px) {
   .half-container {
     width: 100%;
