--- a/src/scss/Pages/_common.scss
+++ b/src/scss/Pages/_common.scss
@@ -6,7 +6,7 @@ main {
 
 .underline-wrapper {
     display: flex;
-    span {
+    .underline-text {
         position: relative;
         color: $green_color;
         z-index: 2;
@@ -23,10 +23,26 @@ main {
     }
 }
 
+.font-14-400 {
+    font-family: 'Noto Sans JP';
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 100%;
+    color: #333;
+}
+
 .font-14-500 {
     font-family: 'Noto Sans JP';
     font-size: 1.4rem;
-    font-weight: 700;
+    font-weight: 500;
+    line-height: 100%;
+    color: #333;
+}
+
+.font-16-500 {
+    font-family: 'Noto Sans JP';
+    font-size: 1.6rem;
+    font-weight: 500;
     line-height: 100%;
     color: #333;
 }
@@ -55,6 +71,14 @@ main {
     color: #333;
 }
 
+.font-20-700 {
+    font-family: 'Noto Sans JP';
+    font-size: 2.0rem;
+    font-weight: 700;
+    line-height: 100%;
+    color: #333;
+}
+
 .font-22-700 {
     font-family: 'Noto Sans JP';
     font-size: 2.2rem;
@@ -74,6 +98,30 @@ main {
 .font-28-700 {
     font-family: 'Noto Sans JP';
     font-size: 2.8rem;
+    font-weight: 700;
+    line-height: 100%;
+    color: #333;
+}
+
+.font-32-700 {
+    font-family: 'Noto Sans JP';
+    font-size: 3.2rem;
+    font-weight: 700;
+    line-height: 100%;
+    color: #333;   
+}
+
+.font-36-700 {
+    font-family: 'Noto Sans JP';
+    font-size: 3.6rem;
+    font-weight: 700;
+    line-height: 100%;
+    color: #333;   
+}
+
+.font-48-700 {
+    font-family: 'Noto Sans JP';
+    font-size: 4.8rem;
     font-weight: 700;
     line-height: 100%;
     color: #333;
